--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.editStudentInformation.EditStudentInformation"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.editStatusMessage.EditStatusMessageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.editUserNameScreen.EditUserNameActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.profile.ProfileActivity"
             android:exported="false" />
         <activity
