--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-
+            android:name=".presentation.feature.setting.multilanguage.LanguageSettingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.feature.menu.editstudentInformation.EditStudentInformation"
             android:exported="false" />
         <activity
