--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         android:theme="@style/Theme.App_music"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".presentation.feature.menu.transactions.TransactionHistoryActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.feature.menu.premiumuser.PremiumUser"
             android:exported="true"
