--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,8 +47,13 @@
             android:exported="false" />
         <activity
             android:name=".presentation.feature.auth.LoginActivity"
-            android:exported="false">
+            android:exported="true">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".presentation.feature.setting.multilanguage.LanguageSettingsActivity"
@@ -78,11 +83,6 @@
                 <data
                     android:scheme="snapsolve"
                     android:host="folders" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
