--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA"
         tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
@@ -73,6 +74,10 @@
             android:exported="false" />
         <activity
             android:name=".presentation.feature.camera.ResultActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".presentation.feature.translate.TranslateActivity"
             android:exported="false" />
 
         <!-- Existing Activities -->
